test version of carousel was added

--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
             </ul>
           </div>
         </header>
+        <div class="carousel">
+          <div class="sample__item">
+            <img src="source/images/header-bg.jpg">
+          </div>
+           <div class="sample__item">
+             <img src="source/images/header-bg.jpg">
+           </div>
+           <div class="sample__item">
+             <img src="source/images/header-bg.jpg">
+           </div>
+        </div>
         <div class="sample">
           <div class="container">
           <h1 class="sample__title h1 text-center">Unique and Modern Design</h1>
@@ -69,16 +80,7 @@
           <p class="sample__text text-center">
             Nam liber tempor cum soluta nobis eleifend option congue nihil
             imperdiet doming id&nbsp;quod mazim placerat facer possim assum.
-          </p>  
-           <!--<div class="sample__item">-->
-             <!--<img src="source/images/header-bg.jpg">-->
-           <!--</div>-->
-            <!--<div class="sample__item">-->
-              <!--<img src="source/images/header-bg.jpg">-->
-            <!--</div>-->
-            <!--<div class="sample__item">-->
-              <!--<img src="source/images/header-bg.jpg">-->
-            <!--</div>-->
+          </p>
           <div class="sample__button d-flex justify-content-center">
             <button type="button" class="sample__button-link btn center-block">Get Started</button>
           </div>
@@ -86,15 +88,15 @@
         </div>
         <div class="features container d-flex flex-row">
             <div class="advantage d-flex flex-column align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="49" height="49" viewBox="0 0 49 49"><defs><path id="ouhda" d="M534.67 1123.72l-14.27 14.27-32.87 14.47 14.48-32.87 14.27-14.26a1.59 1.59 0 1 1 2.25 2.25l-13.85 13.84-8.57 19.47 3 3 19.46-8.58 13.85-13.84a1.59 1.59 0 1 1 2.25 2.25zm-20.17 6.5l13.33-13.34a1.59 1.59 0 1 1 2.25 2.25l-13.33 13.34a1.6 1.6 0 0 1-2.25 0 1.6 1.6 0 0 1 0-2.25zm-3.48-3.49l13.33-13.33a1.59 1.59 0 1 1 2.25 2.25L513.26 1129a1.6 1.6 0 0 1-2.24-2.26zm-3.49-3.48l13.34-13.33a1.59 1.59 0 1 1 2.25 2.25l-13.34 13.33a1.59 1.59 0 0 1-2.25 0 1.6 1.6 0 0 1 0-2.25z"/></defs><g><g transform="translate(-487 -1104)"><use xlink:href="#ouhda"/><use fill="#555" xlink:href="#ouhda"/></g></g></svg>                   
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="49" height="49" viewBox="0 0 49 49"><defs><path id="ouhda" d="M534.67 1123.72l-14.27 14.27-32.87 14.47 14.48-32.87 14.27-14.26a1.59 1.59 0 1 1 2.25 2.25l-13.85 13.84-8.57 19.47 3 3 19.46-8.58 13.85-13.84a1.59 1.59 0 1 1 2.25 2.25zm-20.17 6.5l13.33-13.34a1.59 1.59 0 1 1 2.25 2.25l-13.33 13.34a1.6 1.6 0 0 1-2.25 0 1.6 1.6 0 0 1 0-2.25zm-3.48-3.49l13.33-13.33a1.59 1.59 0 1 1 2.25 2.25L513.26 1129a1.6 1.6 0 0 1-2.24-2.26zm-3.49-3.48l13.34-13.33a1.59 1.59 0 1 1 2.25 2.25l-13.34 13.33a1.59 1.59 0 0 1-2.25 0 1.6 1.6 0 0 1 0-2.25z"/></defs><g><g transform="translate(-487 -1104)"><use xlink:href="#ouhda"/><use fill="#555" xlink:href="#ouhda"/></g></g></svg>
                     <h2 class="advantage__title h2 text-center">Web &amp;&nbsp;App Design</h2>
                     <p class="advantage__text text-center">
-                            Nam liber tempor cum soluta nobis eleifend option congue nihil 
+                            Nam liber tempor cum soluta nobis eleifend option congue nihil
                             imperdiet doming id&nbsp;quod mazim.
                     </p>
             </div>
             <div class="advantage d-flex flex-column align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="44" height="40" viewBox="0 0 44 40"><defs><path id="609xa" d="M833.29 1124.67l-21.44 11.56-21.44-11.56 21.44-11.56zm-3.99 5.88l3.99 2.15-21.44 11.55-21.44-11.55 3.99-2.15 17.45 9.4zm0 8.02l3.99 2.15-21.44 11.56-21.44-11.56 3.99-2.15 17.45 9.41z"/></defs><g><g transform="translate(-790 -1113)"><use xlink:href="#609xa"/><use fill="#c7b299" xlink:href="#609xa"/></g></g></svg>                   
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="44" height="40" viewBox="0 0 44 40"><defs><path id="609xa" d="M833.29 1124.67l-21.44 11.56-21.44-11.56 21.44-11.56zm-3.99 5.88l3.99 2.15-21.44 11.55-21.44-11.55 3.99-2.15 17.45 9.4zm0 8.02l3.99 2.15-21.44 11.56-21.44-11.56 3.99-2.15 17.45 9.41z"/></defs><g><g transform="translate(-790 -1113)"><use xlink:href="#609xa"/><use fill="#c7b299" xlink:href="#609xa"/></g></g></svg>
                     <h2 class="advantage__title h2 text-center">Development</h2>
                     <p class="advantage__text text-center">
                             Nam liber tempor cum soluta nobis eleifend option congue nihil
@@ -102,18 +104,18 @@
                     </p>
             </div>
             <div class="advantage d-flex flex-column align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="44" height="44" viewBox="0 0 44 44"><defs><path id="hf3ha" d="M1130.32 1133.71c-1.44.51-2.84 1.76-3.24 2.74-.4.98-.3 2.85.36 4.23a4.33 4.33 0 0 1-.89 4.58 4.32 4.32 0 0 1-4.57.88c-1.38-.65-3.25-.76-4.24-.35-.98.4-2.22 1.8-2.73 3.24a4.33 4.33 0 0 1-3.87 2.6 4.33 4.33 0 0 1-3.86-2.6c-.51-1.44-1.76-2.83-2.74-3.24-.98-.4-2.85-.3-4.23.35a4.32 4.32 0 0 1-4.57-.88 4.33 4.33 0 0 1-.89-4.58c.66-1.38.76-3.25.36-4.23-.41-.98-1.8-2.23-3.24-2.74a4.33 4.33 0 0 1-2.61-3.86 4.32 4.32 0 0 1 2.6-3.86c1.45-.5 2.84-1.76 3.24-2.74.41-.98.3-2.85-.35-4.23a4.33 4.33 0 0 1 .89-4.58 4.33 4.33 0 0 1 4.57-.88c1.38.65 3.25.76 4.23.35.98-.4 2.23-1.8 2.74-3.24a4.33 4.33 0 0 1 3.86-2.6 4.33 4.33 0 0 1 3.87 2.6c.5 1.44 1.75 2.84 2.74 3.24.98.41 2.85.3 4.23-.35a4.33 4.33 0 0 1 4.57.88 4.33 4.33 0 0 1 .89 4.58c-.66 1.38-.76 3.25-.36 4.23.4.99 1.8 2.23 3.24 2.74 1.44.51 2.6 2.24 2.6 3.86a4.33 4.33 0 0 1-2.6 3.86zm-11.2-3.85a7.99 7.99 0 1 0-15.96-.02 7.99 7.99 0 0 0 15.97.02z"/></defs><g><g transform="translate(-1089 -1108)"><use xlink:href="#hf3ha"/><use fill="#555" xlink:href="#hf3ha"/></g></g></svg>                   
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="44" height="44" viewBox="0 0 44 44"><defs><path id="hf3ha" d="M1130.32 1133.71c-1.44.51-2.84 1.76-3.24 2.74-.4.98-.3 2.85.36 4.23a4.33 4.33 0 0 1-.89 4.58 4.32 4.32 0 0 1-4.57.88c-1.38-.65-3.25-.76-4.24-.35-.98.4-2.22 1.8-2.73 3.24a4.33 4.33 0 0 1-3.87 2.6 4.33 4.33 0 0 1-3.86-2.6c-.51-1.44-1.76-2.83-2.74-3.24-.98-.4-2.85-.3-4.23.35a4.32 4.32 0 0 1-4.57-.88 4.33 4.33 0 0 1-.89-4.58c.66-1.38.76-3.25.36-4.23-.41-.98-1.8-2.23-3.24-2.74a4.33 4.33 0 0 1-2.61-3.86 4.32 4.32 0 0 1 2.6-3.86c1.45-.5 2.84-1.76 3.24-2.74.41-.98.3-2.85-.35-4.23a4.33 4.33 0 0 1 .89-4.58 4.33 4.33 0 0 1 4.57-.88c1.38.65 3.25.76 4.23.35.98-.4 2.23-1.8 2.74-3.24a4.33 4.33 0 0 1 3.86-2.6 4.33 4.33 0 0 1 3.87 2.6c.5 1.44 1.75 2.84 2.74 3.24.98.41 2.85.3 4.23-.35a4.33 4.33 0 0 1 4.57.88 4.33 4.33 0 0 1 .89 4.58c-.66 1.38-.76 3.25-.36 4.23.4.99 1.8 2.23 3.24 2.74 1.44.51 2.6 2.24 2.6 3.86a4.33 4.33 0 0 1-2.6 3.86zm-11.2-3.85a7.99 7.99 0 1 0-15.96-.02 7.99 7.99 0 0 0 15.97.02z"/></defs><g><g transform="translate(-1089 -1108)"><use xlink:href="#hf3ha"/><use fill="#555" xlink:href="#hf3ha"/></g></g></svg>
                     <h2 class="advantage__title h2 text-center">Customization</h2>
                     <p class="advantage__text text-center">
-                            Nam liber tempor cum soluta nobis eleifend option congue nihil 
+                            Nam liber tempor cum soluta nobis eleifend option congue nihil
                             imperdiet doming id&nbsp;quod mazim.
                     </p>
             </div>
             <div class="advantage d-flex flex-column align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="52" height="36" viewBox="0 0 52 36"><defs><path id="x5kga" d="M1388.74 1146.15v-22.17c0-1.36 1.1-2.48 2.46-2.48H1402v-1.44a3.7 3.7 0 0 1 3.7-3.73h6.28a3.7 3.7 0 0 1 3.68 3.73v1.44h10.82a2.48 2.48 0 0 1 2.46 2.48v1.66h-26.2a6.8 6.8 0 0 0-5.75 3.6zm15.73-24.65h8.75v-1.44c0-.69-.55-1.24-1.23-1.24h-6.3c-.32 0-.63.12-.86.36-.23.24-.36.55-.36.88zm25.45 28.26a4.33 4.33 0 0 1-3.54 2.22h-35.3c-1.35 0-1.97-1-1.37-2.22l9.5-19.42a4.32 4.32 0 0 1 3.53-2.22h35.3c1.35 0 1.97 1 1.37 2.22z"/></defs><g><g transform="translate(-1388 -1116)"><use xlink:href="#x5kga"/><use fill="#555" xlink:href="#x5kga"/></g></g></svg>                   
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="52" height="36" viewBox="0 0 52 36"><defs><path id="x5kga" d="M1388.74 1146.15v-22.17c0-1.36 1.1-2.48 2.46-2.48H1402v-1.44a3.7 3.7 0 0 1 3.7-3.73h6.28a3.7 3.7 0 0 1 3.68 3.73v1.44h10.82a2.48 2.48 0 0 1 2.46 2.48v1.66h-26.2a6.8 6.8 0 0 0-5.75 3.6zm15.73-24.65h8.75v-1.44c0-.69-.55-1.24-1.23-1.24h-6.3c-.32 0-.63.12-.86.36-.23.24-.36.55-.36.88zm25.45 28.26a4.33 4.33 0 0 1-3.54 2.22h-35.3c-1.35 0-1.97-1-1.37-2.22l9.5-19.42a4.32 4.32 0 0 1 3.53-2.22h35.3c1.35 0 1.97 1 1.37 2.22z"/></defs><g><g transform="translate(-1388 -1116)"><use xlink:href="#x5kga"/><use fill="#555" xlink:href="#x5kga"/></g></g></svg>
                     <h2 class="advantage__title h2 text-center">Marketing</h2>
                     <p class="advantage__text text-center">
-                            Nam liber tempor cum soluta nobis eleifend option congue nihil 
+                            Nam liber tempor cum soluta nobis eleifend option congue nihil
                             imperdiet doming id&nbsp;quod mazim.
                     </p>
             </div>
@@ -122,7 +124,7 @@
             <div class="slider__header">
                 <h1 class="slider__header-title h1 text-center">Waxom is&nbsp;Realization of&nbsp;your Ideas.</h1>
                 <p class="slider__header-text text-center">
-                    IInvestigationes demonstraverunt lectores legere me&nbsp;lius quod ii&nbsp;legunt 
+                    IInvestigationes demonstraverunt lectores legere me&nbsp;lius quod ii&nbsp;legunt
                     saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
                 </p>
             </div>
@@ -132,7 +134,7 @@
             <div class="slider__item"></div>
             <div class="slider__footer">
                 <h2 class="slider__footer-title h2 text-left">Waxom Multipurpose WordPress Theme</h2>
-                <p class="slider__footer-text text-left"> 
+                <p class="slider__footer-text text-left">
                     Don&rsquo;t Forget to&nbsp;Rate the Template. Thanks so&nbsp;much!
                 </p>
                 <a type="button" class="button btn float-right" href="#">Purchase Now</a>
@@ -142,7 +144,7 @@
             <div class="projects__header">
                 <h1 class="projects__header-title h1 text-center">Our Latest Projects.</h1>
                 <p class="projects__header-text text-center">
-                    Investigationes demonstraverunt lectores legere me&nbsp;lius quod ii&nbsp;legunt 
+                    Investigationes demonstraverunt lectores legere me&nbsp;lius quod ii&nbsp;legunt
                     saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
                 </p>
             </div>
@@ -196,7 +198,7 @@
             <div class="promo__description">
                 <h1 class="promo__description-title h1 text-center">Waxom Video Presentation</h1>
                 <p class="promo__description-text text-center">
-                    Investigationes demonstraverunt lectores legere me&nbsp;lius quod ii&nbsp;legunt 
+                    Investigationes demonstraverunt lectores legere me&nbsp;lius quod ii&nbsp;legunt
                     saepius, qui sequitur mutationem consuetudium.
                 </p>
             </div>
@@ -261,7 +263,7 @@
             <div class="recent__header">
                 <h1 class="recent__header-title h1 text-center">Recent Posts.</h1>
                 <p class="recent__header-text text-center">
-                    Investigationes demonstraverunt lectores legere me&nbsp;lius quod ii&nbsp;legunt 
+                    Investigationes demonstraverunt lectores legere me&nbsp;lius quod ii&nbsp;legunt
                     saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
             </div>
             <div class="recent__row d-flex d-flex justify-content-around">
@@ -271,7 +273,7 @@
                     <h5 class="post__title card-title">Lorem ipsum dolor sit amet</h5>
                     <p class="post__text card-text">
                         Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
-                    </p> 
+                    </p>
                     <a class="post__link btn btn-primary" href="#">Read More</a>
                 </div>
             </div>
@@ -281,7 +283,7 @@
                     <h5 class="post__title card-title">Lorem ipsum dolor sit amet</h5>
                     <p class="post__text card-text">
                         Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
-                    </p> 
+                    </p>
                     <a class="post__link btn btn-primary" href="#">Read More</a>
                 </div>
             </div>
@@ -291,7 +293,7 @@
                     <h5 class="post__title card-title">Lorem ipsum dolor sit amet</h5>
                     <p class="post__text card-text">
                         Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
-                    </p> 
+                    </p>
                     <a class="post__link btn btn-primary" href="#">Read More</a>
                 </div>
             </div>
@@ -318,9 +320,9 @@
                     <img class="company__logo-trademark" src="source/images/icon-trademark.svg">
                 </div>
                 <div class="company__text">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, 
-                        sed diam nonummy nibh euismod tincidunt ut&nbsp;laoreet dolore 
-                        magna aliquam erat volutpat. Ut&nbsp;wisi enim ad&nbsp;minim veniam, 
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                        sed diam nonummy nibh euismod tincidunt ut&nbsp;laoreet dolore
+                        magna aliquam erat volutpat. Ut&nbsp;wisi enim ad&nbsp;minim veniam,
                         quis nostrud exerci suscipit lobortis claritatem.
                 </div>
                 <a class="company__button">Read More</a>
@@ -364,7 +366,7 @@
                 </div>
                 <div class="twitter__post">
                     <p class="twitter__post-text">
-                        Mirum est #envato notare quam littera gothica, quam nunc putamus 
+                        Mirum est #envato notare quam littera gothica, quam nunc putamus
                         parum anteposuerit litterarum
                     </p>
                     <p class="twitter__post-date">
@@ -415,17 +417,21 @@
             </ul>
         </footer>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" src="source/carousel/slick/slick.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+        <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+        <script type="text/javascript" src="source/carousel/slick/slick.min.js"></script>
         <script type="text/javascript">
-          $(document).ready(function(){
-            $('.sample').slick({
-              setting: value, setting: name
-          })
-          });
+            $('.carousel').slick(
+              {
+  dots: true,
+  infinite: true,
+  speed: 300,
+  slidesToShow: 1,
+  adaptiveHeight: true
+}
+            );
         </script>
     </body>
 </html>
