--- a/index.html
+++ b/index.html
@@ -60,22 +60,22 @@
                     </a>
                 </li>
             </ul>
+            <div class="sample">
+                <div class="sample__wrapper">
+                <h1 class="sample__title h1 text-center">Unique and Modern Design</h1>
+                <h2 class="sample__tagline h2 text-center">Portfolio PSD Template</h2>
+                <p class="sample__text text-center">
+                  Nam liber tempor cum soluta nobis eleifend option congue nihil
+                  imperdiet doming id&nbsp;quod mazim placerat facer possim assum.
+                </p>
+                <div class="sample__button d-flex justify-content-center">
+                  <button type="button" class="sample__button-link btn center-block">Get Started</button>
+                </div>
+                </div>
+              </div>
           </div>
-          <div class="sample">
-              <div class="sample__wrapper">
-              <h1 class="sample__title h1 text-center">Unique and Modern Design</h1>
-              <h2 class="sample__tagline h2 text-center">Portfolio PSD Template</h2>
-              <p class="sample__text text-center">
-                Nam liber tempor cum soluta nobis eleifend option congue nihil
-                imperdiet doming id&nbsp;quod mazim placerat facer possim assum.
-              </p>
-              <div class="sample__button d-flex justify-content-center">
-                <button type="button" class="sample__button-link btn center-block">Get Started</button>
-              </div>
-              </div>
-            </div>
         </header>
-        <div class="carousel container-fluid" style="z-index: 1">
+        <div class="carousel">
             <div class="carousel__item">
               <img class="carousel__item-img" d-block w-100 src="source/images/header-bg.jpg">
             </div>
@@ -86,6 +86,7 @@
                <img class="carousel__item-img" d-block w-100 src="source/images/header-bg.jpg">
              </div>
           </div>
+
         <div class="features container d-flex flex-row">
             <div class="advantage d-flex flex-column align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="49" height="49" viewBox="0 0 49 49"><defs><path id="ouhda" d="M534.67 1123.72l-14.27 14.27-32.87 14.47 14.48-32.87 14.27-14.26a1.59 1.59 0 1 1 2.25 2.25l-13.85 13.84-8.57 19.47 3 3 19.46-8.58 13.85-13.84a1.59 1.59 0 1 1 2.25 2.25zm-20.17 6.5l13.33-13.34a1.59 1.59 0 1 1 2.25 2.25l-13.33 13.34a1.6 1.6 0 0 1-2.25 0 1.6 1.6 0 0 1 0-2.25zm-3.48-3.49l13.33-13.33a1.59 1.59 0 1 1 2.25 2.25L513.26 1129a1.6 1.6 0 0 1-2.24-2.26zm-3.49-3.48l13.34-13.33a1.59 1.59 0 1 1 2.25 2.25l-13.34 13.33a1.59 1.59 0 0 1-2.25 0 1.6 1.6 0 0 1 0-2.25z"/></defs><g><g transform="translate(-487 -1104)"><use xlink:href="#ouhda"/><use fill="#555" xlink:href="#ouhda"/></g></g></svg>
