carousel was added as background, sample block was added to the center of the container

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <header class="page-header">
-          <div class="container-fluid d-flex align-items-center">
+          <div class="container-fluid d-flex align-items-center justify-content-center">
             <div class="logo">
               <a class="logo__img" href="#">
                 <img src="source/images/icon-logo.svg">
@@ -77,13 +77,13 @@
         </header>
         <div class="carousel">
             <div class="carousel__item">
-              <img class="carousel__item-img" d-block w-100 src="source/images/header-bg.jpg">
+              <img class="carousel__item-img" src="source/images/header-bg.jpg">
             </div>
              <div class="carousel__item">
-               <img class="carousel__item-img" d-block w-100 src="source/images/header-bg.jpg">
+               <img class="carousel__item-img" src="source/images/header-bg.jpg">
              </div>
              <div class="carousel__item">
-               <img class="carousel__item-img" d-block w-100 src="source/images/header-bg.jpg">
+               <img class="carousel__item-img" src="source/images/header-bg.jpg">
              </div>
           </div>
 
