--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
           </div>
         </header>
         <div class="carousel container-fluid">
+          <div class="arrow-prev">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="40" height="73" viewBox="0 0 40 73"><defs><path id="hnfua" d="M188.03 547.98L150 511.5l38.03-36.48 1.97 2-35.93 34.48L190 545.98z"/></defs><g><g transform="translate(-150 -475)"><use xlink:href="#hnfua"/><use  xlink:href="#hnfua"/></g></g></svg>
+
+          </div>
+          <div class="arrow-next">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="40" height="73" viewBox="0 0 40 73"><defs><path id="3wiba" d="M1731.97 547.98L1770 511.5l-38.03-36.48-1.97 2 35.93 34.48-35.93 34.48z"/></defs><g><g transform="translate(-1730 -475)"><use xlink:href="#3wiba"/><use  xlink:href="#3wiba"/></g></g></svg>
+          </div>
           <div class="js-carousel">
             <div class="carousel__item carousel-item">
               <img class="carousel__item-img" src="source/images/header-bg.jpg">
