--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="40" height="73" viewBox="0 0 40 73"><defs><path id="3wiba" d="M1731.97 547.98L1770 511.5l-38.03-36.48-1.97 2 35.93 34.48-35.93 34.48z"/></defs><g><g transform="translate(-1730 -475)"><use xlink:href="#3wiba"/><use  xlink:href="#3wiba"/></g></g></svg>
           </div>
           <div class="js-carousel">
-            <div class="carousel__item carousel-item">
+            <div class="carousel__item carousel-item d-flex justify-content-center">
               <img class="carousel__item-img" src="source/images/header-bg.jpg">
-              <div class="sample">
+              <div class="sample align-self-center">
                 <h1 class="sample__title h1 text-center">Unique and Modern Design</h1>
                 <h2 class="sample__tagline h2 text-center">Portfolio PSD Template</h2>
                 <p class="sample__text text-center">
@@ -81,13 +81,13 @@
                   imperdiet doming id&nbsp;quod mazim placerat facer possim assum.
                 </p>
                 <div class="sample__button d-flex justify-content-center">
-                  <button type="button" class="sample__button-link btn center-block">Get Started</button>
+                  <a class="sample__button-link">Get Started</a>
                 </div>
               </div>
             </div>
-            <div class="carousel__item carousel-item">
+            <div class="carousel__item carousel-item d-flex justify-content-center">
               <img class="carousel__item-img" src="source/images/header-bg.jpg">
-              <div class="sample">
+              <div class="sample align-self-center">
                 <h1 class="sample__title h1 text-center">Unique and Modern Design</h1>
                 <h2 class="sample__tagline h2 text-center">Portfolio PSD Template</h2>
                 <p class="sample__text text-center">
@@ -95,13 +95,13 @@
                   imperdiet doming id&nbsp;quod mazim placerat facer possim assum.
                 </p>
                 <div class="sample__button d-flex justify-content-center">
-                  <button type="button" class="sample__button-link btn center-block">Get Started</button>
+                  <a class="sample__button-link">Get Started</a>
                 </div>
               </div>
             </div>
-            <div class="carousel__item carousel-item">
+            <div class="carousel__item carousel-item d-flex justify-content-center">
               <img class="carousel__item-img" src="source/images/header-bg.jpg">
-              <div class="sample">
+              <div class="sample align-self-center">
                 <h1 class="sample__title h1 text-center">Unique and Modern Design</h1>
                 <h2 class="sample__tagline h2 text-center">Portfolio PSD Template</h2>
                 <p class="sample__text text-center">
@@ -109,7 +109,7 @@
                   imperdiet doming id&nbsp;quod mazim placerat facer possim assum.
                 </p>
                 <div class="sample__button d-flex justify-content-center">
-                  <button type="button" class="sample__button-link btn center-block">Get Started</button>
+                  <a class="sample__button-link">Get Started</a>
                 </div>
               </div>
             </div>
