cursor pointer was added for .sample__button-link

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                   imperdiet doming id&nbsp;quod mazim placerat facer possim assum.
                 </p>
                 <div class="sample__button d-flex justify-content-center">
-                  <a class="sample__button-link">Get Started</a>
+                  <button class="sample__button-link">Get Started</button>
                 </div>
               </div>
             </div>
@@ -95,7 +95,7 @@
                   imperdiet doming id&nbsp;quod mazim placerat facer possim assum.
                 </p>
                 <div class="sample__button d-flex justify-content-center">
-                  <a class="sample__button-link">Get Started</a>
+                  <button class="sample__button-link">Get Started</button>
                 </div>
               </div>
             </div>
@@ -109,7 +109,7 @@
                   imperdiet doming id&nbsp;quod mazim placerat facer possim assum.
                 </p>
                 <div class="sample__button d-flex justify-content-center">
-                  <a class="sample__button-link">Get Started</a>
+                  <button class="sample__button-link">Get Started</button>
                 </div>
               </div>
             </div>
