container width was added to .projects block, projects.scss was imported to style.scss

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <a type="button" class="button btn float-right" href="#">Purchase Now</a>
             </div>
         </div>
-        <div class="projects">
+        <div class="projects container-fluid">
             <div class="projects__header">
                 <h1 class="projects__header-title h1 text-center">Our Latest Projects.</h1>
                 <p class="projects__header-text text-center">
