pictures are loading by .load() and by .click()

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <div class="category-item">Photography</div>
             </div>
             <div class="projects__wrapper d-flex  flex-wrap justify-content-center">
-            <div class="projects__item col-sm-4 card-body">
+            <!--<div class="projects__item col-sm-4 card-body">
                 <img class="projects__item-img card-img-top" src="source/images/projects-item-1-img.jpg">
                 <h3 class="projects__item-title h3 card-title text-center">Claritas Etiam Processus</h3>
                 <p class="projects__item-tag card-text text-center">Photography, Nature</p>
@@ -215,7 +215,7 @@
                 <img class="projects__item-img card-img-top" src="source/images/projects-item-6-img.jpg">
                 <h3 class="projects__item-title h3 card-title text-center">Usus Legehntis Videntur</h3>
                 <p class="projects__item-tag card-text text-center">Photography, Holiday</p>
-            </div>
+            </div>-->
             </div>
             <div class="projects__button d-flex justify-content-center">
                 <button type="button" href="#" class="projects__button-link">Load More</button>
