basic preliminary  styles for .category buttons were set

--- a/index.html
+++ b/index.html
@@ -178,12 +178,12 @@
                     saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
                 </p>
             </div>
-            <div class="category d-flex justify-content-center">
-                <div class="category-item">All</div>
-                <div class="category-item">Web Design</div>
-                <div class="category-item">Mobile App</div>
-                <div class="category-item">Illustration</div>
-                <div class="category-item">Photography</div>
+            <div class="category">
+                <button class="category__item">All</button>
+                <button class="category__item">Web Design</button>
+                <button class="category__item">Mobile App</button>
+                <button class="category__item">Illustration</button>
+                <button class="category__item">Photography</button>
             </div>
             <div class="projects__wrapper d-flex  flex-wrap justify-content-center">
             <!--<div class="projects__item col-sm-4 card-body">
