--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>Waxom. Portfolio PSD Template</title>
         <link rel="stylesheet" type="text/css" href="source/carousel/slick/slick.css"/>
         <link rel="stylesheet" type="text/css" href="source/carousel/slick/slick-theme.css"/>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
+        <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.css">-->
         <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -24,30 +24,30 @@
                     <a class="logo__trademark-link" href="#">Waxom</a>
                 </div>
             </div>
-            <ul class="menu">
-                <li class="menu__item" >
-                    <a class="menu__item-link" href="#">Home</a>
+            <ul class="menu nav">
+                <li class="menu__item nav-item" >
+                    <a class="menu__item-link nav-link" href="#">Home</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__item-link" href="#">About&nbsp;Us</a>
+                <li class="menu__item nav-item">
+                    <a class="menu__item-link nav-link" href="#">About&nbsp;Us</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__item-link" href="#">Shortcodes</a>
+                <li class="menu__item nav-item">
+                    <a class="menu__item-link nav-link" href="#">Shortcodes</a>
                 </li>
-                <li class="menu__item" >
-                    <a class="menu__item-link" href="#">Portfolio</a>
+                <li class="menu__item nav-item" >
+                    <a class="menu__item-link nav-link" href="#">Portfolio</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__item-link" href="#">Features</a>
+                <li class="menu__item nav-item">
+                    <a class="menu__item-link nav-link" href="#">Features</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__item-link" href="#">Blog</a>
+                <li class="menu__item nav-item">
+                    <a class="menu__item-link nav-link" href="#">Blog</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__item-link" href="#">Pricing</a>
+                <li class="menu__item nav-item">
+                    <a class="menu__item-link nav-link" href="#">Pricing</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__item-link" href="#">Contact</a>
+                <li class="menu__item nav-item">
+                    <a class="menu__item-link nav-link" href="#">Contact</a>
                 </li>
                 <li class="menu__item">
                     <a class="menu__item-link" href="#" a-label="Cart">
