path to bootstrap.scss in style.scss was changed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="source/carousel/slick/slick.css"/>
         <link rel="stylesheet" type="text/css" href="source/carousel/slick/slick-theme.css"/>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.css">
+        <!--<link rel="stylesheet" href="HTML5-JQuery-landing-demo/bootstrap/dist/css/bootstrap.css">-->
         <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
