--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
         <title>Waxom. Portfolio PSD Template</title>
         <link rel="stylesheet" type="text/css" href="source/carousel/slick/slick.css"/>
         <link rel="stylesheet" type="text/css" href="source/carousel/slick/slick-theme.css"/>
-        <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">-->
-        <link rel="stylesheet" href="source/css/bootstrap.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <!--<link href="bootstrap/dist/css/bootstrap.css" rel="stylesheet">-->
         <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link href="source/css/style.css" rel="stylesheet">
     </head>
-    <body>
-        <header class="page-header">
+    <body data-spy="scroll" data-target=".nav">
+        <header class="page-header" id="header">
           <div class="container-fluid d-flex align-items-center justify-content-center">
             <div class="logo">
               <a class="logo__img" href="#">
@@ -26,10 +26,10 @@
             </div>
             <ul class="menu nav">
                 <li class="menu__item nav-item" >
-                    <a class="menu__item-link nav-link" href="#">Home</a>
+                    <a class="menu__item-link nav-link" href="#header">Home</a>
                 </li>
                 <li class="menu__item nav-item">
-                    <a class="menu__item-link nav-link" href="#">About&nbsp;Us</a>
+                    <a class="menu__item-link nav-link" href="#features">About&nbsp;US</a>
                 </li>
                 <li class="menu__item nav-item">
                     <a class="menu__item-link nav-link" href="#">Shortcodes</a>
@@ -38,16 +38,16 @@
                     <a class="menu__item-link nav-link" href="#">Portfolio</a>
                 </li>
                 <li class="menu__item nav-item">
-                    <a class="menu__item-link nav-link" href="#">Features</a>
+                    <a class="menu__item-link nav-link" href="#">Promo</a>
                 </li>
                 <li class="menu__item nav-item">
                     <a class="menu__item-link nav-link" href="#">Blog</a>
                 </li>
                 <li class="menu__item nav-item">
-                    <a class="menu__item-link nav-link" href="#">Pricing</a>
+                    <a class="menu__item-link nav-link" href="#">Clients</a>
                 </li>
                 <li class="menu__item nav-item">
-                    <a class="menu__item-link nav-link" href="#">Contact</a>
+                    <a class="menu__item-link nav-link" href="#">Contacts</a>
                 </li>
                 <li class="menu__item">
                     <a class="menu__item-link" href="#" a-label="Cart">
@@ -116,7 +116,7 @@
           </div>
         </div>
 
-        <div class="features container d-flex flex-row">
+        <div class="features container d-flex flex-row" id="features">
             <div class="advantage d-flex flex-column align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="49" height="49" viewBox="0 0 49 49"><defs><path id="ouhda" d="M534.67 1123.72l-14.27 14.27-32.87 14.47 14.48-32.87 14.27-14.26a1.59 1.59 0 1 1 2.25 2.25l-13.85 13.84-8.57 19.47 3 3 19.46-8.58 13.85-13.84a1.59 1.59 0 1 1 2.25 2.25zm-20.17 6.5l13.33-13.34a1.59 1.59 0 1 1 2.25 2.25l-13.33 13.34a1.6 1.6 0 0 1-2.25 0 1.6 1.6 0 0 1 0-2.25zm-3.48-3.49l13.33-13.33a1.59 1.59 0 1 1 2.25 2.25L513.26 1129a1.6 1.6 0 0 1-2.24-2.26zm-3.49-3.48l13.34-13.33a1.59 1.59 0 1 1 2.25 2.25l-13.34 13.33a1.59 1.59 0 0 1-2.25 0 1.6 1.6 0 0 1 0-2.25z"/></defs><g><g transform="translate(-487 -1104)"><use xlink:href="#ouhda"/><use fill="#555" xlink:href="#ouhda"/></g></g></svg>
                     <h2 class="advantage__title h2 text-center">Web &amp;&nbsp;App Design</h2>
@@ -454,5 +454,6 @@
         <script type="text/javascript" src="source/carousel/slick/slick.min.js"></script>
         <script src="source/script/header-carousel.js"></script>
         <script src="source/script/projects-listing.js"></script>
+        <script src="source/script/scrollspy.js"></script>
     </body>
 </html>
