--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
                     <a class="menu__item-link nav-link" href="#features">About&nbsp;US</a>
                 </li>
                 <li class="menu__item nav-item">
-                    <a class="menu__item-link nav-link" href="#">Shortcodes</a>
+                    <a class="menu__item-link nav-link" href="#slider">Shortcodes</a>
                 </li>
                 <li class="menu__item nav-item" >
-                    <a class="menu__item-link nav-link" href="#">Portfolio</a>
+                    <a class="menu__item-link nav-link" href="#projects">Portfolio</a>
                 </li>
                 <li class="menu__item nav-item">
-                    <a class="menu__item-link nav-link" href="#">Promo</a>
+                    <a class="menu__item-link nav-link" href="#promo">Promo</a>
                 </li>
                 <li class="menu__item nav-item">
-                    <a class="menu__item-link nav-link" href="#">Blog</a>
+                    <a class="menu__item-link nav-link" href="#recent-posts">Blog</a>
                 </li>
                 <li class="menu__item nav-item">
-                    <a class="menu__item-link nav-link" href="#">Clients</a>
+                    <a class="menu__item-link nav-link" href="#clients">Clients</a>
                 </li>
                 <li class="menu__item nav-item">
-                    <a class="menu__item-link nav-link" href="#">Contacts</a>
+                    <a class="menu__item-link nav-link" href="#social">Contacts</a>
                 </li>
                 <li class="menu__item">
                     <a class="menu__item-link" href="#" a-label="Cart">
@@ -150,7 +150,7 @@
                     </p>
             </div>
         </div>
-        <div class="slider">
+        <div class="slider" id="slider">
             <div class="slider__header">
                 <h1 class="slider__header-title h1 text-center">Waxom is&nbsp;Realization of&nbsp;your Ideas.</h1>
                 <p class="slider__header-text text-center">
@@ -170,7 +170,7 @@
                 <a type="button" class="button btn float-right" href="#">Purchase Now</a>
             </div>
         </div>
-        <div class="projects container-fluid">
+        <div class="projects container-fluid" id="projects">
             <div class="projects__header">
                 <h1 class="projects__header-title h1 text-center">Our Latest Projects.</h1>
                 <p class="projects__header-text text-center">
@@ -221,7 +221,7 @@
                 <button type="button" href="#" class="projects__button-link">Load More</button>
             </div>
         </div>
-        <div class="promo" style="background: url(source/images/promo-img.jpg)">
+        <div class="promo" style="background: url(source/images/promo-img.jpg)" id="promo">
             <div class="promo__button text-center">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="70" height="70" viewBox="0 0 70 70"><defs><path id="gi8ca" d="M955.93 3685.82a2.06 2.06 0 0 1-2.06-2.06v-29.53a2.06 2.06 0 0 1 3.38-1.58l17.72 14.77a2.06 2.06 0 0 1 0 3.16l-17.72 14.76c-.37.32-.84.48-1.32.48zm2.06-27.19v20.73l12.44-10.36zm2.95 45.37a34.8 34.8 0 0 1-17.1-4.47 2.06 2.06 0 1 1 2.01-3.6 30.99 30.99 0 0 0 37-5.08 30.93 30.93 0 0 0 0-43.7 30.93 30.93 0 0 0-43.7 0 30.93 30.93 0 0 0 0 43.7 2.06 2.06 0 0 1-2.91 2.9 35.06 35.06 0 0 1 0-49.51 35.06 35.06 0 0 1 49.52 0 35.06 35.06 0 0 1 0 49.52 35.1 35.1 0 0 1-24.82 10.24z"/></defs><g><g transform="translate(-926 -3634)"><use xlink:href="#gi8ca"/><use fill="#fff" xlink:href="#gi8ca"/></g></g></svg>
             </div>
@@ -289,7 +289,7 @@
                 <p class="statistics__item-text">We&nbsp;launched</p>
             </div>
         </div>
-        <div class="recent container">
+        <div class="recent container" id="recent-posts">
             <div class="recent__header">
                 <h1 class="recent__header-title h1 text-center">Recent Posts.</h1>
                 <p class="recent__header-text text-center">
@@ -329,7 +329,7 @@
             </div>
         </div>
     </div>
-        <div class="clients d-flex justify-content-around" style="background: url(source/images/clients-bg.jpg)">
+        <div class="clients d-flex justify-content-around" style="background: url(source/images/clients-bg.jpg)" id="clients">
             <div class="clients__logo">
                 <img src="source/images/icon-client-logo-1.svg">
             </div>
@@ -343,7 +343,7 @@
                 <img src="source/images/icon-client-logo-4.svg">
             </div>
         </div>
-        <div class="social d-flex flex-fill">
+        <div class="social d-flex flex-fill" id="social">
             <div class="company">
                 <div class="company__logo">
                     <img class="company__logo-img" src="source/images/icon-logo.svg">
