hover effects on .menu__item while scrolling were added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a class="logo__trademark-link" href="#">Waxom</a>
                 </div>
             </div>
-            <ul class="menu nav">
+            <ul class="menu nav nav-tabs" role="tablist">
                 <li class="menu__item nav-item" >
                     <a class="menu__item-link nav-link" href="#header">Home</a>
                 </li>
