offset for scrolling was set

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link href="source/css/style.css" rel="stylesheet">
     </head>
-    <body data-spy="scroll" data-target=".nav">
+    <body data-spy="scroll" data-target=".nav" data-offset="160">
         <header class="page-header" id="header">
           <div class="container-fluid d-flex align-items-center justify-content-center">
             <div class="logo">
@@ -26,7 +26,7 @@
             </div>
             <ul class="menu nav nav-tabs" role="tablist">
                 <li class="menu__item nav-item" >
-                    <a class="menu__item-link nav-link" href="#header">Home</a>
+                    <a class="menu__item-link nav-link" href="#carousel">Home</a>
                 </li>
                 <li class="menu__item nav-item">
                     <a class="menu__item-link nav-link" href="#features">About&nbsp;US</a>
@@ -62,7 +62,7 @@
             </ul>
           </div>
         </header>
-        <div class="carousel container-fluid p-0">
+        <div class="carousel container-fluid p-0" id="carousel">
           <div class="arrow-prev">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="40" height="73" viewBox="0 0 40 73"><defs><path id="hnfua" d="M188.03 547.98L150 511.5l38.03-36.48 1.97 2-35.93 34.48L190 545.98z"/></defs><g><g transform="translate(-150 -475)"><use xlink:href="#hnfua"/><use  xlink:href="#hnfua"/></g></g></svg>
 
