necessary scss files were added and imported to style.scss

--- a/index.html
+++ b/index.html
@@ -357,29 +357,29 @@
                 </div>
                 <a class="company__button">Read More</a>
             </div>
-            <div class="posts">
-                <h2 class="posts__title">Recent Posts</h2>
-                <div class="posts__item">
-                    <p class="posts__item-date">
+            <div class="blog">
+                <h2 class="blog__title">Recent Posts</h2>
+                <div class="blog__item">
+                    <p class="blog__item-date">
                         September&nbsp;08, 2015
                     </p>
-                    <p class="posts__item-text">
+                    <p class="blog__item-text">
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit
                     </p>
                 </div>
-                <div class="posts__item">
-                    <p class="posts__item-date">
+                <div class="blog__item">
+                    <p class="blog__item-date">
                         September&nbsp;08, 2015
                     </p>
-                    <p class="posts__item-text">
+                    <p class="blog__item-text">
                         Diam nonummy nibh euismod tincidunt ut&nbsp;laoreet dolore magna
                     </p>
                 </div>
-                <div class="posts__item">
-                    <p class="posts__item-date">
+                <div class="blog__item">
+                    <p class="blog__item-date">
                         September&nbsp;08, 2015
                     </p>
-                    <p class="posts__item-text">
+                    <p class="blog__item-text">
                         Claritas est etiam processus dynamicus, qui sequitur mutationem per seacula quarta decima
                     </p>
                 </div>
