styles for .promo were set

--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
                     Investigationes demonstraverunt lectores legere me&nbsp;lius quod ii&nbsp;legunt
                     saepius, qui sequitur mutationem consuetudium.
                 </p>
+              <p class="promo__time">03:26</p>
             </div>
             </div>
         </div>
