basic styles for .statistics were added

--- a/index.html
+++ b/index.html
@@ -265,7 +265,8 @@
                 </ul>
             </div>
         </div>
-        <div class="statistics d-flex justify-content-around bg-secondary">
+        <div class="statistics container-fluid">
+          <div class="statistics__wrapper">
             <div class="statistics__item">
                 <img class="statistics__item-img" src="source/images/icon-people.svg">
                 <p class="statistics__item-num">3587</p>
@@ -290,6 +291,7 @@
                 <img class="statistics__item-img" src="source/images/icon-dish.svg">
                 <p class="statistics__item-num">900</p>
                 <p class="statistics__item-text">We&nbsp;launched</p>
+            </div>
             </div>
         </div>
         <div class="recent container" id="recent-posts">
